--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ main > div {
 }
 
 main > div > h1 {
-    margin-top: 120px;
+    margin-top: 140px;
     text-transform: uppercase;
     font-weight: 400;
     font-size: 25px;
@@ -74,6 +74,7 @@ div > button {
     font-weight: 600;
     font-size: 12px;
     margin-bottom: 30px;
+    cursor: pointer;
 }
 
 div > p {
@@ -96,5 +97,5 @@ div > a {
     text-transform: uppercase;
     font-weight: 600;
     font-size: 13px;
-    margin-top: 195px;
+    margin-top: 175px;
 }
